--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body class="index-page">
 
-    <div data-include="/_includes/header.html"></div>
+    <div data-include="_includes/header.html"></div>
 
   <main class="main">
 
@@ -895,7 +895,7 @@
 
   </main>
 
-    <div data-include="/_includes/footer.html"></div>
+    <div data-include="_includes/footer.html"></div>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
@@ -912,7 +912,7 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="/js/include.js"></script>
+  <script src="js/include.js"></script>
 
 </body>
 
