--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="js/include.js"></script>
+  <script src="/js/include.js"></script>
 
 </body>
 
