--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 <body class="index-page">
 
-    <div data-include="_includes/header.html"></div>
-
+<header></header>
+  
   <main class="main">
 
     <!-- Hero Section -->
@@ -895,7 +895,7 @@
 
   </main>
 
-    <div data-include="_includes/footer.html"></div>
+    <footer></footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
