--- a/temp.html
+++ b/temp.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Home
+---
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -801,7 +806,12 @@
     <!-- Recent Posts Section -->
 <section id="recent-posts" class="recent-posts section">
 
-  <!-- Recent Posts Section -->
+  ---
+layout: default
+title: Home
+---
+
+<!-- Recent Posts Section -->
 <section id="recent-posts" class="recent-posts section">
 
   <!-- Section Title -->
@@ -854,6 +864,7 @@
   </div>
 </section>
 <!-- End Recent Posts Section -->
+
 
 
     
