--- a/header.html
+++ b/header.html
@@ -17,13 +17,13 @@
             <li><a href="/services/advertisement-management">Advertisement Management</a></li>
           </ul>
         </li>
-        <li><a href="https://gyaansaar.bizznist.com/knowledge-base" target="_blank">Resource Center</a></li>
-        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="/blog" target="_blank">Blog</a></li>
+        <li><a href="/pricing">Pricing</a></li>
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
     </nav>
 
-    <a class="btn-getstarted flex-md-shrink-0" href="#contact">Book a Free Consultation</a>
+    <a class="btn-getstarted flex-md-shrink-0" href="/contact">Book a Free Consultation</a>
 
   </div>
 </header>
