--- a/pricing/index.html
+++ b/pricing/index.html
@@ -44,7 +44,7 @@
 
     <!-- Page Title -->
     <div class="page-title">
-      <div class="heading">
+      <div class="heading" style="padding-bottom: 10px;">
         <!--<div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
@@ -64,7 +64,7 @@
     </div><!-- End Page Title -->
 
     <!-- Starter Section Section -->
-<section id="pricing" class="pricing section">
+<section id="pricing" class="pricing section" style="padding-top: 0px;">
 
       <!-- Section Title -->
       <div class="container section-title aos-init aos-animate" data-aos="fade-up">
