--- a/header.html
+++ b/header.html
@@ -1,3 +1,8 @@
+---
+layout: default
+sitemap: false
+robots: noindex
+---
 
 <header id="header" class="header d-flex align-items-center fixed-top">
   <div class="container-fluid container-xl position-relative d-flex align-items-center">
