--- a/tracking.html
+++ b/tracking.html
@@ -1,3 +1,9 @@
+---
+layout: default
+sitemap: false
+robots: noindex
+---
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKFMSBS4V7"></script>
 <script>
