--- a/temp.html
+++ b/temp.html
@@ -14,6 +14,7 @@ robots: noindex
   <title>BizzNist | IT Solutions, Website Development & Digital Services</title>
   <meta name="description" content="BizzNist provides expert website development, app development, SEO, digital marketing, and advertisement management services. Get high-performance websites & apps built for your business success.">
   <meta name="keywords" content="website development services, app development company, best SEO agency, digital marketing services, WordPress development, Shopify experts, business website design, mobile app testing, PPC management, IT services, advertisement management, BizzNist">
+  <meta name="robots" content="noindex, nofollow">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
