--- a/starter-page.html
+++ b/starter-page.html
@@ -13,6 +13,8 @@ robots: noindex
   <title>Starter Page - FlexStart Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
+  <meta name="robots" content="noindex, nofollow">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
