--- a/admin/index.html
+++ b/admin/index.html
@@ -1,15 +1,11 @@
----
-layout: default
-sitemap: false
-robots: noindex
----
-
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>BizzNist Content Manager</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="robots" content="noindex, nofollow">
+
   </head>
   <body>
     <!-- Load Decap (Netlify) CMS -->
