--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@ title: Home
 
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
-    <h2>Recent Posts</h2>
+    <h2>Recent Blog</h2>
     <p>Resource Center</p>
   </div><!-- End Section Title -->
 
@@ -861,7 +861,7 @@ title: Home
 
     <!-- View All Button -->
     <div class="text-center mt-4">
-      <a href="{{ '/blog/' | relative_url }}" class="btn btn-primary">View All Posts</a>
+      <a href="{{ '/blog/' | relative_url }}" class="btn btn-primary">View All Blogs</a>
     </div>
 
   </div>
