--- a/admin/index.html
+++ b/admin/index.html
@@ -5,13 +5,13 @@
     <title>BizzNist Content Manager</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="robots" content="noindex, nofollow">
-
   </head>
   <body>
     <!-- Load Decap (Netlify) CMS -->
     <script src="https://unpkg.com/decap-cms@^3.8.3/dist/decap-cms.js"></script>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
+    <!-- Load custom widgets -->
+    <script src="/admin/table-widget.js"></script>
   </body>
 </html>
-
