--- a/admin/index.html
+++ b/admin/index.html
@@ -10,5 +10,8 @@
     <!-- Load Decap (Netlify) CMS -->
     <script src="https://unpkg.com/decap-cms@^3.8.3/dist/decap-cms.js"></script>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+    <!-- Load custom table editor component -->
+    <script src="/admin/table-widget.js"></script>
   </body>
 </html>
