--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ title: Home
               <i class="bi bi-activity icon"></i>
               <h3>Website Development</h3>
               <p>Custom-built websites for businesses and individuals, designed for performance, scalability, and user engagement.</p>
-              <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="/services/website-development" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -402,7 +402,7 @@ title: Home
               <i class="bi bi-broadcast icon"></i>
               <h3>Advertisement Management</h3>
               <p>End-to-end campaign management across Google Ads, social media, and PPC platforms for maximum ROI.</p>
-              <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="/services/advertisement-management/" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
