--- a/services/website-development/index.html
+++ b/services/website-development/index.html
@@ -100,7 +100,7 @@
               <i class="bi bi-headset help-icon"></i>
               <h4>Have a Question?</h4>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span> <a href="tel:+91 9210481163">+91 9210481163</span></a></p>
-              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@bizznist.com">contact@bizznist.com</a></p>
+              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
             </div>
 
           </div>
