--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Privacy Policy | BizzNist</title>
-  <meta name="description" content="Read the Privacy Policy of BizzNist. Learn how we collect, use, and protect your data while ensuring compliance with GDPR and CCPA.">
-  <meta name="keywords" content="BizzNist privacy policy, data protection, GDPR compliance, CCPA compliance, website privacy policy, cookies policy, personal data security">
+  <title>Privacy Policy | BizzNist | IT Solutions, Website Development & Digital Services</title>
+  <meta name="description" content="Read the Privacy Policy of Bizznist. Learn how we collect, use, and protect your personal information while ensuring transparency and security.
+">
+  <meta name="keywords" content="privacy policy, Bizznist privacy, data protection, website cookies">
 
   <!-- Favicons -->
   <link href="/assets/img/favicon.png" rel="icon">
@@ -15,7 +16,7 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,16 +27,33 @@
 
   <!-- Main CSS File -->
   <link href="/assets/css/main.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: FlexStart
+  * Template URL: https://bootstrapmade.com/flexstart-bootstrap-startup-template/
+  * Updated: Nov 01 2024 with Bootstrap v5.3.3
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
 <body class="index-page">
 
   <header></header>
 
-  <main class="main">
+    <main class="main">
 
     <!-- Page Title -->
     <div class="page-title">
+      <div class="heading">
+        <!--<div class="container">
+          <div class="row d-flex justify-content-center text-center">
+            <div class="col-lg-8">
+              <h1>About BizzNist</h1>
+            </div>
+          </div>
+        </div>
+      </div> -->
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
@@ -46,114 +64,74 @@
       </nav>
     </div><!-- End Page Title -->
 
-    <!-- Privacy Policy Section -->
-    <section id="privacy-policy" class="starter-section section">
+    <!-- Starter Section Section -->
+    <section id="starter-section" class="starter-section section">
 
+      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2 style="text-align: center;">Privacy Policy</h2>
+        <h2>Who We Are</h2>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up">
+        <p style="text-align: center;">
+Effective Date: 17-Jan-2025
+
+<p>At Bizznist (“we,” “our,” “us”), your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you visit our website [https://www.bizznist.com](https://www.bizznist.com).</p>
+
+<h3>Information We Collect</h3>
+<li>- Personal details such as name, email, and phone number when you contact us or use our services.</li>
+<li>- Non-personal data such as browser type, IP address, and pages visited (through cookies and analytics).</li>
+
+<h3>How We Use Your Information</h3>
+<p>
+  <ul>
+<li>- To provide and improve our services.</li>
+<li>- To communicate with you about inquiries, offers, and updates.</li>
+<li>- To comply with legal obligations.</li>
+  </ul>
+
+<h3>Cookies</h3>
+<p>We use cookies to enhance user experience, track performance, and analyze website traffic. You can disable cookies in your browser settings.</p>
+
+<h3>Third-Party Services</h3>
+<p>We may use third-party tools such as Google Analytics and advertising partners. These services may collect data in accordance with their own privacy policies.</p>
+
+<h3>Your Rights</h3>
+<p>You may request access, correction, or deletion of your personal data by contacting us at bizznist@gmail.com.</p>
+
+<h3>Contact Us</h3>
+<p>If you have any questions about this Privacy Policy, please contact us at:</p>
+<li>bizznist@gmail.com</li>  
+<li>New Delhi, India</li>
         
       </div>
-      <p style="text-align: center;">
-          Effective Date: August 26, 2025<br>
-          Last Updated:August 26, 2025
-        </p>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          At <strong>BizzNist</strong>, we respect your privacy and are committed to protecting the personal information you share with us. This Privacy Policy explains how we collect, use, and safeguard your information when you visit our website (<a href="https://www.bizznist.com/">https://www.bizznist.com</a>) or use our services.
-        </p>
-      </div>
 
-      <!-- Sections -->
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">1. Information We Collect</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          🔹 <strong>Personal Information</strong>: Name, email, phone number, company name, or details you provide via forms.<br>
-          🔹 <strong>Non-Personal Information</strong>: Browser type, device type, IP address, location data, and usage patterns.<br>
-          🔹 <strong>Cookies & Tracking Data</strong>: Used to improve your browsing experience and analyze site traffic.
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">2. How We Use Your Information</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          🔹 To operate and maintain our website and services.<br>
-          🔹 To respond to inquiries and provide customer support.<br>
-          🔹 To send newsletters or promotional content (optional).<br>
-          🔹 To analyze usage and improve user experience.<br>
-          🔹 To comply with legal obligations and prevent fraud.
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">3. Sharing of Information</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          We do not sell your personal information. We may share it with trusted service providers, legal authorities if required, or during business transfers such as mergers or acquisitions.
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">4. Cookies & Tracking Technologies</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          Cookies help us remember your preferences, analyze visitor behavior, and deliver a better browsing experience. You may disable cookies in your browser, but some site features may not work properly.
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">5. Data Security</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          We use industry-standard security measures to protect your information. However, no internet transmission is completely secure.
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">6. Your Rights</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          You may have rights to access, update, or delete your personal data, opt-out of marketing, restrict processing, or request data portability. To exercise your rights, email us at <strong>contact@bizznist.com</strong>.
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">7. GDPR & CCPA Compliance</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          If you are located in the EU or California, you have additional rights such as knowing what personal data we collect, requesting deletion, or opting out of data sales (we do not sell personal data).
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">8. Third-Party Links</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          Our website may include links to external sites. We are not responsible for their privacy practices and encourage reviewing their policies.
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">9. Children’s Privacy</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          We do not knowingly collect personal data from individuals under the age of 13 (or the minimum legal age in your country).
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">10. Changes to This Policy</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          We may update this Privacy Policy. Any changes will be posted here with an updated "Last Updated" date.
-        </p>
-      </div>
-
-      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">11. Contact Us</h2></div>
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
-          If you have any questions, please contact us:<br>
-          📧 <strong>Email:</strong> contact@bizznist.com<br>
-          🌐 <strong>Website:</strong> <a href="https://www.bizznist.com/">www.bizznist.com</a>
-        </p>
-      </div>
-
-    </section><!-- /Privacy Policy Section -->
+      
+    </section><!-- /Starter Section Section -->
 
   </main>
 
   <footer></footer>
+
+<!--    <div class="footer-newsletter">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col-lg-6">
+            <h4>Join Our Newsletter</h4>
+            <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+            <form action="forms/newsletter.php" method="post" class="php-email-form">
+              <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">Your subscription request has been sent. Thank you!</div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -170,4 +148,12 @@
   <script src="/js/include.js"></script>
 
 </body>
+
 </html>
+
+
+<style>
+  .section-title {
+  padding-bottom: 30px !important;
+}
+  </style>
