--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -45,7 +45,7 @@
 
     <!-- Page Title -->
     <div class="page-title">
-      <div class="heading">
+      <div class="heading" style="padding-bottom: 0px;">
         <!--<div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
@@ -69,26 +69,24 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Who We Are</h2>
+        <h2>Privacy Policy</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
         <p style="text-align: center;">
 Effective Date: 17-Jan-2025
 
-<p>At Bizznist (“we,” “our,” “us”), your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you visit our website [https://www.bizznist.com](https://www.bizznist.com).</p>
+<p>At Bizznist (“we,” “our,” “us”), your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you visit our website (https://www.bizznist.com).</p>
 
 <h3>Information We Collect</h3>
-<li>- Personal details such as name, email, and phone number when you contact us or use our services.</li>
-<li>- Non-personal data such as browser type, IP address, and pages visited (through cookies and analytics).</li>
+<li>Personal details such as name, email, and phone number when you contact us or use our services.</li>
+<li>Non-personal data such as browser type, IP address, and pages visited (through cookies and analytics).</li>
 
 <h3>How We Use Your Information</h3>
 <p>
-  <ul>
-<li>- To provide and improve our services.</li>
-<li>- To communicate with you about inquiries, offers, and updates.</li>
-<li>- To comply with legal obligations.</li>
-  </ul>
+<li>To provide and improve our services.</li>
+<li>To communicate with you about inquiries, offers, and updates.</li>
+<li>To comply with legal obligations.</li>
 
 <h3>Cookies</h3>
 <p>We use cookies to enhance user experience, track performance, and analyze website traffic. You can disable cookies in your browser settings.</p>
@@ -97,11 +95,11 @@ Effective Date: 17-Jan-2025
 <p>We may use third-party tools such as Google Analytics and advertising partners. These services may collect data in accordance with their own privacy policies.</p>
 
 <h3>Your Rights</h3>
-<p>You may request access, correction, or deletion of your personal data by contacting us at bizznist@gmail.com.</p>
+<p>You may request access, correction, or deletion of your personal data by contacting us at <a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a>.</p>
 
 <h3>Contact Us</h3>
 <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-<li>bizznist@gmail.com</li>  
+<li><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></li>  
 <li>New Delhi, India</li>
         
       </div>
