--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -65,7 +65,7 @@
     </div><!-- End Page Title -->
 
     <!-- Starter Section Section -->
-    <section id="starter-section" class="starter-section section">
+    <section id="starter-section" class="starter-section section" style="padding-top: 20px; padding-bottom: 20px;">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
