--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -79,14 +79,17 @@ Effective Date: 17-Jan-2025
 <p>At Bizznist (“we,” “our,” “us”), your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you visit our website (https://www.bizznist.com).</p>
 
 <h3>Information We Collect</h3>
+<p>
 <li>Personal details such as name, email, and phone number when you contact us or use our services.</li>
 <li>Non-personal data such as browser type, IP address, and pages visited (through cookies and analytics).</li>
+</p>
 
 <h3>How We Use Your Information</h3>
 <p>
 <li>To provide and improve our services.</li>
 <li>To communicate with you about inquiries, offers, and updates.</li>
 <li>To comply with legal obligations.</li>
+</p>
 
 <h3>Cookies</h3>
 <p>We use cookies to enhance user experience, track performance, and analyze website traffic. You can disable cookies in your browser settings.</p>
@@ -98,10 +101,10 @@ Effective Date: 17-Jan-2025
 <p>You may request access, correction, or deletion of your personal data by contacting us at <a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a>.</p>
 
 <h3>Contact Us</h3>
-<p>If you have any questions about this Privacy Policy, please contact us at:</p>
+<p>If you have any questions about this Privacy Policy, please contact us at:
 <li><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></li>  
 <li>New Delhi, India</li>
-        
+  </p>
       </div>
 
       
