--- a/about-us/index.html
+++ b/about-us/index.html
@@ -92,10 +92,7 @@
           <li>Customer-Centric Approach</li>
           </p>
           
-          <p>
-          <li><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></li>  
-          <li>New Delhi, India</li>
-            </p>
+          <p> <a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a> | New Delhi, India</p>
       </div>
 
       
