--- a/contact/index.html
+++ b/contact/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About Us | BizzNist | IT Solutions, Website Development & Digital Services</title>
-  <meta name="description" content="Discover BizzNist, a leading IT solutions provider specializing in website development, app development, SEO, digital marketing, and more. Learn about our mission, vision, values, and expertise.">
-  <meta name="keywords" content="IT solutions, website development, app development, SEO services, digital marketing, business IT consulting, BizzNist, professional IT services, technology solutions, IT support, eCommerce development, WordPress development, Shopify experts, Wix developers, business website solutions">
+  <title>Contact Us | BizzNist | IT Solutions, Website Development & Digital Services</title>
+  <meta name="description" content="Contact Bizznist for website development, SEO, and IT solutions. Reach us via email, phone, or office in Delhi, India.">
+  <meta name="keywords" content="contact Bizznist, IT services contact, web development inquiry">
 
   <!-- Favicons -->
   <link href="/assets/img/favicon.png" rel="icon">
@@ -44,7 +44,7 @@
 
     <!-- Page Title -->
     <div class="page-title">
-      <div class="heading">
+      <div class="heading" style="padding-bottom: 0px;">
         <!--<div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
@@ -57,20 +57,20 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Contact BizzNist</li>
+            <li class="current">Contact Us</li>
           </ol>
         </div>
       </nav>
     </div><!-- End Page Title -->
 
-      <section id="contact" class="contact section">
+      <section id="contact" class="contact section" style="padding-top: 20px;">
 
       <!-- Section Title -->
       <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Let's Build Something Amazing Together!</p>
+        <h2>Contact Us</h2>
+        <h4>We’re here to help you grow your business digitally.  </h4>
       </div><!-- End Section Title -->
-
+      
       <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
@@ -78,7 +78,7 @@
           <div class="col-lg-6">
 
             <div class="row gy-4">
-              <div class="col-md-6">
+              <div class="col-md-6" style="text-align: center;">
                 <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
@@ -87,7 +87,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <div class="col-md-6">
+              <div class="col-md-6" style="text-align: center;">
                 <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
                   <h3>Call for quick inquiries</h3>
@@ -95,7 +95,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <div class="col-md-6">
+              <div class="col-md-6" style="text-align: center;">
                 <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="400">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
@@ -103,7 +103,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <div class="col-md-6">
+              <div class="col-md-6" style="text-align: center;">
                 <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="500">
                   <i class="bi bi-clock"></i>
                   <h3>Open Hours</h3>
@@ -115,7 +115,8 @@
             </div>
 
           </div>
-
+          
+          <h4>Or simply fill out our contact form, and we’ll get back to you within 24 hours.</h4>
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" class="php-email-form aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
