--- a/contact/index.html
+++ b/contact/index.html
@@ -115,8 +115,8 @@
             </div>
 
           </div>
+           <div class="col-lg-6">
           
-          <h4>Or simply fill out our contact form, and we’ll get back to you within 24 hours.</h4>
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" width="640" height="915" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
 
