--- a/contact/index.html
+++ b/contact/index.html
@@ -115,9 +115,34 @@
             </div>
 
           </div>
-           <div class="col-lg-6">
-          
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" width="390" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+           <div class="col-lg-6">          
+          <div class="form-container">
+            <iframe 
+              src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" 
+              frameborder="0" 
+              marginheight="0" 
+              marginwidth="0" 
+              allowfullscreen>
+            </iframe>
+          </div>
+          <style>
+            .form-container {
+              position: relative;
+              width: 100%;
+              max-width: 800px;   /* limit on big screens */
+              margin: auto;       /* center align */
+              aspect-ratio: 3/4;  /* keeps proportion */
+            }
+            
+            .form-container iframe {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              border: none;
+            }
+            </style>
         </div>
 
       </div>
