--- a/services/index.html
+++ b/services/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Services | BizzNist | IT Solutions, Website Development & Digital Services</title>
-  <meta name="description" content="Discover BizzNist, a leading IT solutions provider specializing in website development, app development, SEO, digital marketing, and more. Learn about our mission, vision, values, and expertise.">
-  <meta name="keywords" content="IT solutions, website development, app development, SEO services, digital marketing, business IT consulting, BizzNist, professional IT services, technology solutions, IT support, eCommerce development, WordPress development, Shopify experts, Wix developers, business website solutions">
+  <title>Our Services | Website Development, SEO & IT Solutions - Bizznist</title>
+  <meta name="description" content="Explore Bizznist services: website design, SEO, digital marketing, and enterprise IT solutions tailored for startups and growing businesses.">
+  <meta name="keywords" content="website design Delhi, SEO company India, digital marketing services, IT solutions">
 
   <!-- Favicons -->
   <link href="/assets/img/favicon.png" rel="icon">
