--- a/index.html
+++ b/index.html
@@ -926,35 +926,29 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
-
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
-
-                <div class="col-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
-              </div>
-            </form>
+            <div class="form-container">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" allowfullscreen="">
+            </iframe>
+          </div>
+            <style>
+            .form-container {
+              position: relative;
+              width: 100%;
+              max-width: 800px;   /* limit on big screens */
+              margin: auto;       /* center align */
+              aspect-ratio: 3/4;  /* keeps proportion */
+            }
+            
+            .form-container iframe {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              border: none;
+            }
+            </style>
+            
           </div><!-- End Contact Form -->
 
         </div>
