--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section">
-
+    <section id="hero" class="hero section" style="
+    padding-top: 0px;
+    padding-bottom: 0px;">
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
