--- a/index.html
+++ b/index.html
@@ -928,27 +928,14 @@
 
           <div class="col-lg-6">
             <div class="form-container">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" allowfullscreen="">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" allowfullscreen="" border: 0;
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    aspect-ratio: 1 / 1;>
             </iframe>
           </div>
-            <style>
-            .form-container {
-              position: relative;
-              width: 100%;
-              max-width: 800px;   /* limit on big screens */
-              margin: auto;       /* center align */
-              aspect-ratio: 3/4;  /* keeps proportion */
-            }
-            
-            .form-container iframe {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 50%;
-              border: none;
-            }
-            </style>
             
           </div><!-- End Contact Form -->
 
