--- a/index.html
+++ b/index.html
@@ -928,12 +928,7 @@
 
           <div class="col-lg-6">
             <div class="form-container">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" allowfullscreen="" border: 0;
-    position: relative;
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
-    aspect-ratio: 1 / 1;>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" allowfullscreen="" border="0" position="relative" width="100%" max-width="800px" margin="auto" aspect-ratio="1 / 1">
             </iframe>
           </div>
             
