--- a/index.html
+++ b/index.html
@@ -873,72 +873,78 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="contact section">
+<section id="contact" class="contact section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Let's Build Something Amazing Together!</p>
-      </div><!-- End Section Title -->
+  <!-- Section Title -->
+  <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+    <h2>Contact</h2>
+    <p>Let's Build Something Amazing Together!</p>
+  </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+
+    <div class="row gy-4">
+
+      <div class="col-lg-6">
 
         <div class="row gy-4">
-
-          <div class="col-lg-6">
-
-            <div class="row gy-4">
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="200">
-                  <i class="bi bi-geo-alt"></i>
-                  <h3>Address</h3>
-                  <p>Mundka, Delhi</p>
-                  <p>India, 110081</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="300">
-                  <i class="bi bi-telephone"></i>
-                  <h3>Call for quick inquiries</h3>
-                  <p><a href="tel:+919210481163">+91 9210481163</a></p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="400">
-                  <i class="bi bi-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="500">
-                  <i class="bi bi-clock"></i>
-                  <h3>Open Hours</h3>
-                  <p>Monday - Friday</p>
-                  <p>10:00AM - 06:00PM</p>
-                </div>
-              </div><!-- End Info Item -->
-
+          <div class="col-md-6">
+            <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="200">
+              <i class="bi bi-geo-alt"></i>
+              <h3>Address</h3>
+              <p>Mundka, Delhi</p>
+              <p>India, 110081</p>
             </div>
+          </div><!-- End Info Item -->
 
-          </div>
+          <div class="col-md-6">
+            <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="300">
+              <i class="bi bi-telephone"></i>
+              <h3>Call for quick inquiries</h3>
+              <p><a href="tel:+919210481163">+91 9210481163</a></p>
+            </div>
+          </div><!-- End Info Item -->
 
-          <div class="col-lg-6">
-            <div class="form-container">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" allowfullscreen="" border="0" position="relative" width="100%" max-width="800px" margin="auto">
-            </iframe>
-          </div>
-            
-          </div><!-- End Contact Form -->
+          <div class="col-md-6">
+            <div class="info-item aos-init" data-aos="fade" data-aos-delay="400">
+              <i class="bi bi-envelope"></i>
+              <h3>Email Us</h3>
+              <p><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
+            </div>
+          </div><!-- End Info Item -->
+
+          <div class="col-md-6">
+            <div class="info-item aos-init" data-aos="fade" data-aos-delay="500">
+              <i class="bi bi-clock"></i>
+              <h3>Open Hours</h3>
+              <p>Monday - Friday</p>
+              <p>10:00AM - 06:00PM</p>
+            </div>
+          </div><!-- End Info Item -->
 
         </div>
 
       </div>
 
-    </section><!-- /Contact Section -->
+      <div class="col-lg-6">
+        <div class="form-container">
+          <iframe 
+            src="https://docs.google.com/forms/d/e/1FAIpQLSebUThA9jqcA7etJQIUyIQZdB9TDqxBvCstVbaC3QVyWJG8vg/viewform?embedded=true" 
+            frameborder="0" 
+            marginheight="0" 
+            marginwidth="0" 
+            allowfullscreen
+            style="width: 100%; height: 600px; border: none; display: block; margin: 0 auto;">
+          </iframe>
+        </div>
+      </div><!-- End Contact Form -->
+
+    </div>
+
+  </div>
+
+</section>
+<!-- /Contact Section -->
 
   </main>
 
