--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -80,25 +80,37 @@ Effective Date: 17-Jan-2025
 
 <h3>Information We Collect</h3>
 <p>
-<li>Personal details such as name, email, and phone number when you contact us or use our services.</li>
-<li>Non-personal data such as browser type, IP address, and pages visited (through cookies and analytics).</li>
+<li>Personal Information: Name, email, phone number when you contact us or use our services.</li>
+<li>Non-Personal Information: Browser type, IP address, pages visited, and analytics data.</li>
+<li>Cookies & Tracking: We use cookies and tracking tools to improve user experience and show relevant content.</li>
+
 </p>
 
 <h3>How We Use Your Information</h3>
 <p>
 <li>To provide and improve our services.</li>
-<li>To communicate with you about inquiries, offers, and updates.</li>
+<li>To communicate with you regarding updates, promotions, and newsletters.</li>
 <li>To comply with legal obligations.</li>
 </p>
 
+<h3>Advertising & Affiliate Links</h3>
+<p>
+  <li>We display advertisements on our site, including **Google AdSense**, which may collect anonymized data for personalized ads.</li>
+<li>We participate in affiliate programs (like hosting, software, and tools). If you purchase products through these links, we may earn a small commission at no extra cost to you.</li>
+</p>
+        
 <h3>Cookies</h3>
 <p>We use cookies to enhance user experience, track performance, and analyze website traffic. You can disable cookies in your browser settings.</p>
 
 <h3>Third-Party Services</h3>
-<p>We may use third-party tools such as Google Analytics and advertising partners. These services may collect data in accordance with their own privacy policies.</p>
+<p>We use third-party services like Google Analytics, Google AdSense, and Affiliate networks. These services may collect data according to their own privacy policies.  
+</p>
 
 <h3>Your Rights</h3>
-<p>You may request access, correction, or deletion of your personal data by contacting us at <a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a>.</p>
+<p>
+  <li>You can request access, correction, or deletion of your personal data. </li>
+  <li>- To opt-out of tracking or marketing communications, contact us at <a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a>.</li>
+</p>
 
 <h3>Contact Us</h3>
 <p>If you have any questions about this Privacy Policy, please contact us at:
