--- a/index.html
+++ b/index.html
@@ -974,6 +974,7 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="/js/include.js"></script>
+  <script src="/js/header.js"></script>
 
 </body>
 
