--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
   <script src="/js/include.js"></script>
 
 </body>
