--- a/services/index.html
+++ b/services/index.html
@@ -56,8 +56,7 @@
         </div>
       </div>
 
-      <script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
-<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
+      <div id="ad-slot" class="ad-space"></div>
       
       <nav class="breadcrumbs">
         <div class="container">
@@ -138,9 +137,6 @@
     </section><!-- /Service Details Section -->
 
   </main>
-
-  <script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
-<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
   
   <footer></footer>
 
