--- a/index.html
+++ b/index.html
@@ -963,7 +963,8 @@
 
   <!-- Main JS File -->
   <script src="/assets/js/main.js"></script>
-  <script src="/js/include.js"></script>
+  <script src="/assets/js/include.js"></script>
+  <script src="/assets/js/header.js"></script>
 
 </body>
 
