--- a/services/index.html
+++ b/services/index.html
@@ -43,7 +43,7 @@
 
 <body class="index-page">
 
-  <header></header>
+    {% include header.html %}
 
   <main class="main">
 
@@ -141,7 +141,7 @@
 
   </main>
   
-  <footer></footer>
+    {% include footer.html %}
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
