--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -38,7 +41,7 @@
 
 <body class="index-page">
 
-  <header></header>
+    {% include header.html %}
 
     <main class="main">
 
@@ -107,7 +110,7 @@ Effective Date: 17-Jan-2025
 
   </main>
 
-  <footer></footer>
+    {% include footer.html %}
 
 <!--    <div class="footer-newsletter">
       <div class="container">
