--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -42,7 +42,7 @@
 
 <body class="index-page">
 
-  <header></header>
+    {% include header.html %}
 
     <main class="main">
 
@@ -127,7 +127,7 @@ Effective Date: 17-Jan-2025
 
   </main>
 
-  <footer></footer>
+    {% include footer.html %}
 
 <!--    <div class="footer-newsletter">
       <div class="container">
