--- a/contact/index.html
+++ b/contact/index.html
@@ -41,7 +41,7 @@
 
 <body class="index-page">
 
-  <header></header>
+    {% include header.html %}
 
     <main class="main">
 
@@ -154,7 +154,7 @@
 
   </main>
 
-  <footer></footer>
+    {% include footer.html %}
 
 <!--    <div class="footer-newsletter">
       <div class="container">
