--- a/services/advertisement-management/index.html
+++ b/services/advertisement-management/index.html
@@ -41,7 +41,7 @@
 
 <body class="index-page">
 
-  <header></header>
+    {% include header.html %}
 
   <main class="main">
 
@@ -187,7 +187,7 @@
 
   </main>
   
-  <footer></footer>
+    {% include footer.html %}
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
