--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body class="index-page">
 
   {% include header.html %}
+  <header></header>
   
   <main class="main">
     <!-- Hero Section -->
@@ -947,6 +948,7 @@
   </main>
 
      {% include footer.html %}
+  <footer></footer>
   
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
