--- a/about-us/index.html
+++ b/about-us/index.html
@@ -138,6 +138,13 @@
   <!-- Main JS File -->
   <script src="/assets/js/main.js"></script>
   <script src="/js/include.js"></script>
+  <!-- Load dynamic ads and CMS scripts -->
+  <script src="/assets/js/ads.js"></script> <!-- your ad loader -->
+  <script src="/assets/js/inject-global-scripts.js"></script> <!-- CMS script injector -->
+
+</body>
+</html>
+
 
 </body>
 
