--- a/about-us/index.html
+++ b/about-us/index.html
@@ -66,6 +66,8 @@
       </nav>
     </div><!-- End Page Title -->
 
+    <div id="ad-slot" class="ad-space"></div>  
+
     <!-- Starter Section Section -->
     <section id="starter-section" class="starter-section section" style="padding-top: 20px; padding-bottom: 20px;">
 
