--- a/contact/index.html
+++ b/contact/index.html
@@ -66,6 +66,8 @@
       </nav>
     </div><!-- End Page Title -->
 
+      <div id="header-ad" class="ad-space"></div>
+      
       <section id="contact" class="contact section" style="padding-top: 20px;">
 
       <!-- Section Title -->
@@ -152,6 +154,8 @@
 
     </section>
 
+      <div id="before-footer-ad" class="ad-space"></div>
+      
   </main>
 
     {% include footer.html %}
@@ -188,7 +192,6 @@
 
   <!-- Main JS File -->
   <script src="/assets/js/main.js"></script>
-  <script src="/js/include.js"></script>
 
 </body>
 
