--- a/pricing/index.html
+++ b/pricing/index.html
@@ -65,7 +65,7 @@
         </div>
       </nav>
     </div><!-- End Page Title -->
-
+    <div id="header-ad" class="ad-space"></div>
     <!-- Starter Section Section -->
 <section id="pricing" class="pricing section" style="padding-top: 0px;">
 
@@ -164,7 +164,7 @@
     </section>
 
 </section><!-- /Starter Section Section -->
-
+<div id="before-footer-ad" class="ad-space"></div>
   </main>
 
     {% include footer.html %}
@@ -201,7 +201,6 @@
 
   <!-- Main JS File -->
   <script src="/assets/js/main.js"></script>
-  <script src="/js/include.js"></script>
 
 </body>
 
