--- a/services/website-development/index.html
+++ b/services/website-development/index.html
@@ -67,7 +67,7 @@
         </div>
       </nav>
     </div><!-- End Page Title -->
-
+  <div id="header-ad" class="ad-space"></div>
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
 
@@ -106,7 +106,9 @@
             </div>
 
           </div>
-
+          
+          <div id="ad-slot-sidebar-left" class="ad-space"></div>
+          
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
             <h2>Build Your Digital Presence with Professional Website Development</h2>
@@ -230,7 +232,7 @@
       </div>
 
     </section><!-- /Service Details Section -->
-
+    <div id="before-footer-ad" class="ad-space"></div>
   </main>
   
     {% include footer.html %}
@@ -250,7 +252,6 @@
 
   <!-- Main JS File -->
   <script src="/assets/js/main.js"></script>
-  <script src="/js/include.js"></script>
 
 </body>
 
