--- a/services/index.html
+++ b/services/index.html
@@ -58,8 +58,6 @@
           </div>
         </div>
       </div>
-
-      <div id="ad-slot" class="ad-space"></div>
       
       <nav class="breadcrumbs">
         <div class="container">
@@ -70,7 +68,7 @@
         </div>
       </nav>
     </div><!-- End Page Title -->
-
+  <div id="header-ad" class="ad-space"></div>
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
 
@@ -109,7 +107,7 @@
             </div>
 
           </div>
-
+          <div id="ad-slot-sidebar-left" class="ad-space"></div>
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
             <h3>Driving Digital Success with Innovation</h3>
@@ -138,7 +136,7 @@
       </div>
 
     </section><!-- /Service Details Section -->
-
+  <div id="before-footer-ad" class="ad-space"></div>
   </main>
   
     {% include footer.html %}
@@ -158,7 +156,6 @@
 
   <!-- Main JS File -->
   <script src="/assets/js/main.js"></script>
-  <script src="/js/include.js"></script>
 
 </body>
 
