--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -117,8 +117,8 @@
             <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
           </div>
           <div class="col-lg-6  d-flex flex-column justify-content-center text-center text-md-start" data-aos="fade-in">
-            <h2>App landing page template</h2>
-            <p>We are team of talented designers making websites with Bootstrap</p>
+            <h2>Wander with Reema</h2>
+            <p>Real Stories. Real Style. Real You.</p>
           </div>
         </div>
       </div>
@@ -130,29 +130,29 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>About Wander with Reema</h2>
+        <p>Welcome to Wander with Reema, your passport to experiences beyond ordinary. I’m Reema Roy — traveler, storyteller, food lover, fashion enthusiast, and lifelong explorer. Through short videos, reviews, and immersive journeys, I bring you right alongside me as I discover hidden gems, test lifestyle products, and capture the beauty of everyday moments.</p>
+        <br>
+        <p>Whether I’m wandering through new cities, discovering local flavors, styling on-the-go, or reviewing skincare & fashion finds — Wander with Reema is more than content. It’s a community built on curiosity, authenticity, and inspiration.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
 
-        <div class="row gy-4">
+        <div class="row gy-12">
 
-          <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-12 content" data-aos="fade-up" data-aos-delay="100">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Join me. Explore more. Live with wonder.
             </p>
+            <br>
+            <p>Here, you’ll find:</p>
             <ul>
-              <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo</span></li>
+              <li>✈️ Travel adventures & destination guides</li>
+              <li>🍽 Food & local eats</li>
+              <li>👗 Style & fashion inspiration</li>
+              <li>🧴 Product reviews & recommendations</li>
+              <li>🎥 Shorts videos capturing moments that matter</li>
             </ul>
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
         </div>
@@ -167,8 +167,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>YouTube Gallery</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Watch My Shorts</h2>
+          <p>Quick, fun, and real — dive into my world through YouTube Shorts. From travel bites and product picks to beauty moments and spontaneous vlogs, these snappy clips bring you closer to my everyday adventures.</p>
       </div><!-- End Section Title -->
 
       <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
@@ -225,8 +225,8 @@
     <div class="container footer-top">
       <div class="row gy-1">
         <div class="col-md-12" style="padding-top: 12px; padding-bottom: 12px; text-align: center;">
-          <h4>Follow Us</h4>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+          <h4>Follow Me</h4>
+          <p>Stay connected with me on social media & never miss a moment.</p>
           <div class="social-links d-flex" style="display: inline-flex !important;">
             <a href="https://www.youtube.com/@WanderwithReema"><i class="bi bi-youtube"></i></a>
             <a href="https://www.instagram.com/wanderwithreema/"><i class="bi bi-instagram"></i></a>
