--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -4,9 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - BizzNist Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Wander with Reema | Explore Travel, Lifestyle & Influencer Content</title>
+  <meta name="description" content="Wander with Reema: exploring travel, style, food & lifestyle. Join Reema’s journey through Short videos, reviews, adventures & more on BizzNist." />
+  <meta name="keywords" content="Wander with Reema, Reema travel, Reema lifestyle, travel influencer, short video reviews, BizzNist influencer, fashion, food reviews, wanderwithreema" />
+
+<!-- Open Graph / Social Sharing (optional but recommended) -->
+<meta property="og:title" content="Wander with Reema | Explore Travel, Lifestyle & Influencer Content" />
+<meta property="og:description" content="Wander with Reema: exploring travel, style, food & lifestyle. Join Reema’s journey through short videos, reviews, adventures & more." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.bizznist.com/wanderwithReema" />
+<meta property="og:image" content="https://www.bizznist.com/path/to/your/representative-image.jpg" />
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
