--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -117,14 +117,10 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section">
-
+    <section id="hero" class="hero section" style="background-image: url('assets/img/hero-img.png')";>
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-6 order-lg-last hero-img" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
-          </div>
-          <div class="col-lg-6  d-flex flex-column justify-content-center text-center text-md-start" data-aos="fade-in">
+          <div class="col-lg-12  d-flex flex-column justify-content-center text-center text-md-start" data-aos="fade-in" style="align-items: center;">
             <h2>Wander with Reema</h2>
             <p>Real Stories. Real Style. Real You.</p>
           </div>
