--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -209,7 +209,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About Wander with Reema</h2>
+        <h2>Wander with Reema</h2>
+        <h3>Real Stories. Real Style. Real You.</h3>
         <p>Welcome to Wander with Reema, your passport to experiences beyond ordinary. I’m Reema Roy — traveler, storyteller, food lover, fashion enthusiast, and lifelong explorer. Through short videos, reviews, and immersive journeys, I bring you right alongside me as I discover hidden gems, test lifestyle products, and capture the beauty of everyday moments.</p>
         <br>
         <p>Whether I’m wandering through new cities, discovering local flavors, styling on-the-go, or reviewing skincare & fashion finds — Wander with Reema is more than content. It’s a community built on curiosity, authenticity, and inspiration.</p>
