--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -157,6 +157,7 @@
   margin: 0 8px;
   padding: 0.6rem 1.5rem;
   font-size: 1rem;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
@@ -188,8 +189,22 @@
                   padding-top: 20px;
               ">
     <div class="hero-buttons">
+     <ul>
       <a href="#gallery" class="btn btn-primary">Watch Shorts</a>
-      <a href="#follow" class="btn btn-outline">Follow Me</a>
+      <a href="https://www.youtube.com/@WanderwithReema?sub_confirmation=1" 
+       class="btn btn-primary" 
+       target="_blank" 
+       rel="noopener noreferrer">
+       Subscribe on YouTube
+    </a>
+
+      <a href="https://www.instagram.com/wanderwithreema/" 
+         class="btn btn-outline" 
+         target="_blank" 
+         rel="noopener noreferrer">
+         Follow on Instagram
+      </a>
+     </ul>
     </div>
   </div>
     </section><!-- /Hero Section -->
