--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -154,6 +154,7 @@
 }
 .hero-buttons{
   display: flex;
+  justify-content: center;
 }
 .hero-buttons .btn {
   margin: 0 8px;
@@ -200,7 +201,7 @@ a.btn.btn-instagram {
     </section>
       <div class="hero-content" style="
                   text-align: center;
-                  padding-top: 20px;
+                  padding-top: 10px;
               ">
     <div class="hero-buttons">
      
