--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -197,8 +197,7 @@ a.btn.btn-instagram {
 }
 
 .styled-list li {
-  font-size: 1.1rem;
-  margin-bottom: 12px;
+  font-size: 18px;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -206,7 +205,7 @@ a.btn.btn-instagram {
 }
 
 .styled-list li span {
-  font-size: 1.3rem;
+  font-size: 18px;
 }
 
 </style>
