--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -78,7 +78,7 @@
 }
 
 .youtube-info p.title {
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.3;
 }
@@ -89,7 +89,7 @@
 }
 
 .youtube-info .views {
-  font-size: 12px;
+  font-size: 16px;
   color: #777;
 }
 
@@ -245,7 +245,7 @@ a.btn.btn-instagram {
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
-    <section id="about" class="about section light-background">
+    <section id="about" class="about section light-background" style="padding-bottom: 0px;padding-top: 20px;">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px;">
@@ -258,7 +258,7 @@ a.btn.btn-instagram {
 
       <div class="container">
           <div class="row justify-content-center text-center">
-            <div class="container section-title" data-aos="fade-up" data-aos-delay="100" style="padding-bottom: 20px;">
+            <div class="container section-title" data-aos="fade-up" data-aos-delay="100" style="padding-bottom: 0px;">
         
             <h3 class="lead">Join me. Explore more. Live with wonder.</h3>
         
